--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,6 +75,89 @@ body {
   background-color: #f8fafc;
 }
 
+.img-container{
+  
+  background-color: black;
+  height:500px;
+  width: 800px;
+  position: relative;
+  border:2px solid black;
+  margin:auto;
+}
+.home-img-container-wrapper{
+  
+  border:2px solid black;
+  margin:auto;
+  height:500px;
+  width: 753px;
+  position: relative;
+}
+
+.home-img-container-bg{
+  height: 500px;
+  width: 100%;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+
+.img-darken{
+  filter: brightness(10%);
+  transition: 1s;
+}
+
+.home-img-text-wrapper
+{
+    position: absolute;
+    margin-top: 200px;
+    color:white;
+   
+    opacity: 0;
+    transition:1s;
+}
+.home-img-text-wrapper:hover
+{
+    opacity: 1;
+   
+}
+
+.img-container img{
+  width:100%;
+  height:100%;
+}
+
+.transition-img{
+  position: absolute;
+  top:0px;
+  left:0px;
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.transition-img:hover{
+  opacity: 1;
+}
+
+.stud-imgs{
+  width: 80%;
+  margin-left: 100px;
+  height:500px;
+  align-content: center;
+  background-image: url('/students_imgs/img1.jpg');
+  background-repeat: no-repeat;
+  border: 2px solid black;
+  box-shadow: 1px 2px 10px 3px blue;
+  animation: slider 25s infinite linear;
+}
+
+@keyframes slider{
+      0%{background-image: url('/students_imgs/img1.jpg');}
+      35%{background-image: url('/students_imgs/img2.jpg');}
+      75%{background-image: url('/students_imgs/img3.jpg');}
+}
+
+
+
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
 }
